--- a/apps/docs/pages/rate-limit.en.mdx
+++ b/apps/docs/pages/rate-limit.en.mdx
@@ -13,7 +13,7 @@ The following table outlines the rate limits for different APIs:
 | Flood Warning  | 4 requests per minute     | 10 requests per minute |
 | Weather        | 4 requests per minute     | 10 requests per minute |
 | GTFS Static    | 4 requests per minute     | 10 requests per minute |
-| GTFS Realtime  | TBD                       | TBD                    |
+| GTFS Realtime  | 4 requests per minute     | 10 requests per minute |
 
 <span className="text-sm italic">* APIs that are unreleased yet are marked with TBD.</span>
 
