--- a/apps/docs/pages/rate-limit.ms.mdx
+++ b/apps/docs/pages/rate-limit.ms.mdx
@@ -13,7 +13,7 @@ Jadual berikut menghuraikan had kadar penggunaan untuk API yang disediakan:
 | Amaran Banjir | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | Cuaca         | 4 permintaan setiap minit | 10 permintaan setiap minit |
 | GTFS Statik   | 4 permintaan setiap minit | 10 permintaan setiap minit |
-| GTFS Realiti  | TBD                       | TBD                        |
+| GTFS Realtime | 4 permintaan setiap minit | 10 permintaan setiap minit |
 
 <span className="text-sm italic">* API yang belum dikeluarkan lagi ditandai dengan TBD.</span>
 
