--- a/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
@@ -17,7 +17,7 @@ Currently, our GTFS Realtime API only offers vehicle position data. For more det
 
 ### Important note: We are building iteratively
 
-(below is direct copy from gtfs-static)
+(below is direct copy from gtfs-static - this section should be the "flag in docs" disclaimer stuff touching on WIP errors)
 
 This is the first time that Malaysia has had an official and freely-usable GTFS API. It is the result of months of hard work and collaboration between the data.gov.my developer team and various public transport operators. It is by no means complete; there are plenty of services that will only be integrated over the coming months and years. However, with several primary services already included, we felt that it was time to push it live - so that the private sector and public transport community could begin building from it, and most crucially, giving us feedback on how to improve it.
 
