docs: add validation error note

--- a/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.en.mdx
@@ -17,10 +17,10 @@ Currently, our GTFS Realtime API only offers vehicle position data. For more det
 
 ### Important note: We are building iteratively
 
-_TODO: inform users that validation errors for each feed are included [below](#vehicle-position)?_
-
 This is the first time that Malaysia has had an official and freely-usable GTFS API. It is the result of months of hard work and collaboration between the data.gov.my developer team and various public transport operators. It is by no means complete; there are plenty of services that will only be integrated over the coming months and years. However, with several primary services already included, we felt that it was time to push it live - so that the private sector and public transport community could begin building from it, and most crucially, giving us feedback on how to improve it.
 If you have any feedback on the GTFS API, please write to us at data.dtsa@mampu.gov.my - we welcome any and all constructive feedback!
+
+_Note: Validation errors specific to each feed are provided in the [Vehicle Position](#vehicle-position) section below. These errors are generated during the development phase using the [GTFS Realtime Validator](https://github.com/MobilityData/gtfs-realtime-validator)._
 
 ### Source of GTFS Realtime Data
 
