docs: update changelog (en & ms)

--- a/apps/docs/pages/changelog.ms.mdx
+++ b/apps/docs/pages/changelog.ms.mdx
@@ -1,3 +1,12 @@
+## 1.3.0 (2023-11-14)
+
+### Pelancaran API GTFS Realtime
+
+- Pelancaran [API GTFS Realtime](ms/realtime-api/gtfs-realtime) dengan data dari myBAS Johor Bahru, KTMB dan Prasarana dengan 'endpoints' berikut:
+  - `gtfs-realtime/vehicle-position/mybas-johor` untuk muat turun fail protobuf myBAS GTFS-R `.proto`.
+  - `gtfs-realtime/vehicle-position/ktmb` untuk muat turun fail protobuf KTMB GTFS-R `.proto`.
+  - `gtfs-realtime/vehicle-position/prasarana?category=<category>` untuk muat turun fail protobuf Prasarana GTFS-R `.proto`.
+
 ## 1.2.0 (2023-11-06)
 
 ### Pelancaran API GTFS Statik
