--- a/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
+++ b/apps/docs/pages/realtime-api/gtfs-realtime.ms.mdx
@@ -106,7 +106,7 @@ import pandas as pd
 from requests import get
 
 # Sample GTFS-R URL from Malaysia's Open API
-URL = 'https://api.data.gov.my/gtfs-realtime/vehicle-position/prasarana?category=rkl'
+URL = 'https://api.data.gov.my/gtfs-realtime/vehicle-position/prasarana?category=rapid-bus-kl'
 
 # Parse the GTFS Realtime feed
 feed = gtfs_realtime_pb2.FeedMessage()
